10/10/25:

- Update Cart and Items to share layout style
- Update Cart to display added items and quantities
- Update addCart to push additional information to array
- Move displaying Navigation to only be in App
- Create addCart to handle pushing item quantities to cart amount display

10/9/25:

- Map API items to cards
- Set up Items with API call
- Set home to default page
- Implement basic nav bar
- Install and set up basic router
- Basic component folders and files set up

10/6/25:

- General set up
- Reduce gif file size